# url-shortener-api

./: .coveragerc  .env  .env.example  .gitignore  .mypy.ini  .ruff.toml  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: CODEOWNERS
.github/workflows/: test.yml  tests.yml
app/: __main__.py  crud.py  main.py
app/api/: __init__.py  exceptions.py  fields.py  handlers.py  redirect.py  responses.py  schemes.py
app/api/routes/: auth.py  urls.py  users.py
app/api/schemes/: __init__.py  _schemes.py  fields.py  response.py  responses.py  tag.py  url.py  user.py
app/core/: config.py  logger.py  utils.py
app/core/auth/: __init__.py  jwt.py  jwt_.py  jwt_auth.py
app/core/auth/jwt/: __init__.py  dependencies.py  jwt.py
app/core/config/: __init__.py  settings.py
app/core/config/data/: first_name.py
app/core/data/: __init__.py  address.py  last_name.py  page.py  tag.py  url.py
app/core/database/: __init__.py  database.py  generator.py  id_generator.py
app/core/database/models/: __init__.py  base.py  bases.py  click.py  link.py  mixins.py  model.py  network.py  status.py  tag.py  url.py  user.py
app/core/networks/: README.md  __init__.py  fetch.py  parse.py
app/core/settings/: __init__.py  settings.py
app/core/settings/data/: __init__.py  address.py  country.py  data.py  first_name.py  ip.py  last_name.py  mail.py  mask.py  name.py  page.py  password.py  phone.py  slug.py  source.py  user.py
app/core/utils/: __init__.py  conversion.py  timestamp.py
app/crud/: __init__.py  click.py  network.py  status.py  tag.py  url.py  user.py
app/redirector/: __init__.py  controller.py
tests/: conftest.py  testing_utils.py  utils.py
tests/api/: conftest.py  test_schemes.py  types_.py
tests/api/routes/: conftest.py  test_auth.py
tests/api/routes/auth/: test_authenticate_user.py  test_create_user.py  test_refresh_user.py  test_register_user.py
tests/core/auth/: conftest.py  test_jwt.py  test_jwt_.py  test_jwt_auth.py
tests/core/auth/jwt/: conftest.py  test_dependencies.py  test_encode_token.py  test_get_current_user.py  test_get_refreshed_user.py  test_get_token_payload.py  test_jwt.py
tests/core/auth/jwt_/: conftest.py  test_encode_token.py  test_generate_token.py  test_get_current_user.py  test_get_refreshed_user.py  test_get_token_payload.py
tests/core/database/: test_database.py  test_id_generator.py
tests/core/database/models/: test_tag.py  (+6 more)
tests/crud/: test_click.py  test_status.py  test_tag.py  test_url.py  test_user.py
tests/crud/status/: test_create.py
tests/crud/user/: test_create.py  test_get.py
www/: README.md  __main__.py  fetch.py  parse.py
(+13 files in other folders)
