[tool.poetry]
name = "FastAPI API"
description = "API for URL shortener."
authors = ["kramber1024 <kramber268@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.1"
pydantic = { extras = ["email"], version = "^2" }
pydantic-settings = "^2"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
aiosqlite = "^0.20.0"
snowflake-id = "^1.0.2"
bcrypt = "^4.1.3"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit = ["tests/*", "app/main.py"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "pragma: no cover",
]
