[tool.poetry]
name = "url-shortener-api"
description = "API for URL shortener"
authors = ["kramber1024 <kramber268@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.34"
pydantic = { extras = ["email"], version = "^2" }
pydantic-settings = "^2"
sqlalchemy = { extras = ["asyncio"], version = "^2" }
aiosqlite = "^0.20"
snowflake-id = "^1.0"
bcrypt = "^4.1"
pyjwt = { extras = ["crypto"], version = "^2.8" }

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
pytest-asyncio = "^0.26"
httpx = "^0.28"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11"
mypy = "^1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
