[tool.poetry]
name = "url-shortener-api"
description = "API for URL shortener"
authors = ["kramber1024 <kramber268@gmail.com>"]
readme = "README.md"
version = "0.1.0"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116"
uvicorn = "^0.35"
pydantic = { extras = ["email"], version = "^2" }
pydantic-settings = "^2"
sqlalchemy = { extras = ["asyncio"], version = "^2" }
aiosqlite = "^0.21"
snowflake-id = "^1"
bcrypt = "^4.1"
pyjwt = { extras = ["crypto"], version = "^2.8" }

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
pytest-asyncio = "^1"
httpx = "^0.28"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12"
mypy = "^1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
